# sqlmodelservice

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
api-errors/: index.html
api-service/: index.html
api-utils/: index.html
docs/: api-errors.md  api-service.md  api-utils.md  fastapi-example.md  index.md
fastapi-example/: index.html
search/: search_index.json
sqlmodelservice/: __init__.py  errors.py  service.py  utils.py
tests/: conftest.py  docker-compose.yml  test_service.py
tests/database/: fixtures.py  player.py
